--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
     "version": 2,
+    "builds": [
+        { "src": "/api/index.php", "use": "vercel-php@0.3.1" },
+        { "src": "/public/**", "use": "@vercel/static" }
+    ],
     "functions": {
         "api/index.php": {
             "runtime": "vercel-php@0.6.0"
