--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,10 @@
     },
     "routes": [
         {
+            "src": "/(css|js)/(.*)",
+            "dest": "public/$1/$2"
+        },
+        {
             "src": "/(.*)",
             "dest": "/api/index.php"
         }
